re PR c++/48911 ([C++0x] Error for valid array subscript)

PR c++/48911
	* semantics.c (cxx_eval_array_reference): Handle implicit
	initializers.

From-SVN: r173515